--- a/tween-engine/tween-engine-android/.classpath
+++ b/tween-engine/tween-engine-android/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="/tween-engine/libs/gdx.jar" sourcepath="/tween-engine/libs/gdx-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="/tween-engine/libs/tween-engine-api.jar" sourcepath="/tween-engine/libs/tween-engine-api-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
